# ai-city

./: .gitignore  README.md  agent-instructions.md  run_game.py
backend/: pyproject.toml
backend/app/: auth.py  database.py  game.py  main.py  models.py  services.py  websocket.py
backend/app/routes/: agent.py  chat.py  game.py  grid.py  marketplace.py  viewer.py
backend/tests/: test_api.py
frontend/: .env
frontend/src/: App.css  App.jsx  constants.js  index.css
frontend/src/components/: AgentStats.jsx  Chat.jsx  Grid.jsx  Marketplace.jsx
frontend/src/hooks/: useWebSocket.js
