[project]
name = "ai-city-backend"
version = "0.1.0"
description = "AI City — collaborative mosaic painting game for coding agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.28", "pytest-asyncio>=0.25"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
